Moved routeProfile to routes.ViewProfile. Requests are now logged as one big chunk to help prevent them getting torn apart and improve log throughput. Newlines are now stripped from dumped requests. Prepared statement logging now only happens in debug mode for speedier server startups. More suspicious request tracking is done outside of debug mode now. Only log the initial message in plugin_markdown in debug mode. Moved the CreateTopicSubmit attachment logging to super debug mode. Removed a couple of unneccesary menu items from the Account Manager menu. Hid the add friend option on the profiles for now. Moved the remaining analytics results loops into a common function. Only log the graph for the analytics routes in debug mode.
Every Theme:
Added CSS for the Don't have an Account link on the Login Page.

Cosora:
Fixed the header CSS on mobile.
The header CSS now covers optheads on mobile.
Revamped the profile comment UI.

Shadow:
Added CSS for sticky topics.

Tempra Simple:
Button CSS now applies to type=submit inputs.
Fixed the IP Search CSS.

Tempra Conflux:
Button CSS now applies to type=submit inputs.
Fixed the IP Search CSS.

Tempra Cursive (Deprecated):
Button CSS now applies to type=submit inputs.

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,17 +5,17 @@
 	</div>
 	<div class="rowblock">
 		<form action="/accounts/login/submit/" method="post">
-			<div class="formrow">
+			<div class="formrow login_name_row">
 				<div class="formitem formlabel"><a>Account Name</a></div>
 				<div class="formitem"><input name="username" type="text" placeholder="Account Name" required /></div>
 			</div>
-			<div class="formrow">
+			<div class="formrow login_password_row">
 				<div class="formitem formlabel"><a>Password</a></div>
 				<div class="formitem"><input name="password" type="password" autocomplete="current-password" placeholder="*****" required /></div>
 			</div>
-			<div class="formrow">
+			<div class="formrow login_button_row">
 				<div class="formitem"><button name="login-button" class="formbutton">Login</button></div>
-				<div class="formitem" style="color: #505050; font-size: 12px; font-weight: normal; float: right;">Don't have an account?</div>
+				<div class="formitem dont_have_account">Don't have an account?</div>
 			</div>
 		</form>
 	</div>
