--- a/templates/profile_comments_row.html
+++ b/templates/profile_comments_row.html
@@ -39,5 +39,6 @@
 				<span class="editable_block user_content">{{.ContentHtml}}</span>
 			</div>
 		</div>
+		<div class="after_comment"></div>
 	{{end}}
 {{end}}
