--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -398,7 +398,7 @@ input, select {
 	padding-bottom: 12px;
 }
 
-.formbutton, button {
+.formbutton, button, input[type="submit"] {
 	background: white;
 	border: 1px solid #8e8e8e;
 }
@@ -408,7 +408,29 @@ input, select {
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 15px;
+}
+.formbutton, ip_search_search {
 	border-color: hsl(0, 0%, 80%);
+}
+
+.dont_have_account {
+	color: #505050;
+	font-size: 12px;
+	font-weight: normal;
+	float: right;
+}
+
+.ip_search_block {
+	border-bottom: none;
+}
+.ip_search_block .rowitem {
+	display: flex;
+}
+.ip_search_input {
+	width: 100%;
+}
+.ip_search_search {
+	margin-left: 10px;
 }
 
 /* TODO: Add the avatars to the forum list */
