--- a/templates/account_own_edit_email.html
+++ b/templates/account_own_edit_email.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<div class="colstack account account_emails">
+<div id="account_edit_emails" class="colstack account account_emails">
 	{{template "account_menu.html" . }}
 	<main class="colstack_right">
 		<div class="colstack_item colstack_head rowhead">
