--- a/templates/account_own_edit_username.html
+++ b/templates/account_own_edit_username.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<div class="colstack account">
+<div id="account_edit_username" class="colstack account">
 	{{template "account_menu.html" . }}
 	<main class="colstack_right">
 		<div class="colstack_item colstack_head rowhead">
