--- a/templates/error.html
+++ b/templates/error.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 <main>
 	<div class="rowblock rowhead">
-		<div class="rowitem"><h1>An error has occured</h1></div>
+		<div class="rowitem"><h1>{{lang "error_head"}}</h1></div>
 	</div>
 	<div class="rowblock">
 		<div class="rowitem passive rowmsg">{{.Something}}</div>
