--- a/templates/forums.html
+++ b/templates/forums.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<main itemscope itemtype="http://schema.org/ItemList">
+<main id="forumsItemList" itemscope itemtype="http://schema.org/ItemList">
 
 <div class="rowblock opthead">
 	<div class="rowitem"><h1 itemprop="name">Forums</h1></div>
