--- a/templates/panel-inner-menu.html
+++ b/templates/panel-inner-menu.html
@@ -51,6 +51,9 @@
 			<a href="/panel/analytics/systems/">Systems</a>
 		</div>
 		<div class="rowitem passive submenu">
+			<a href="/panel/analytics/langs/">Languages</a>
+		</div>
+		<div class="rowitem passive submenu">
 			<a href="/panel/analytics/referrers/">Referrers</a>
 		</div>
 	{{end}}
