--- a/themes/shadow/public/main.css
+++ b/themes/shadow/public/main.css
@@ -160,11 +160,20 @@ a {
 	color: var(--main-text-color);
 }
 
+.alertbox {
+	display: flex;
+}
 .alert {
 	padding-bottom: 12px;
 	background-color: var(--main-block-color);
+	border-left: 4px solid hsl(21, 100%, 50%);
 	padding: 12px;
 	display: block;
+	margin-top: 8px;
+	margin-bottom: -3px;
+	margin-left: 8px;
+	margin-right: 8px;
+	width: 100%;
 }
 
 .rowblock {
@@ -652,25 +661,25 @@ input[type=checkbox]:checked + label.poll_option_label .sel {
 	display: flex;
 	flex-direction: row;
 }
-
-.has_opt {
-	margin-right: 0px;
-	display: inline-block;
-	float: left;
-	padding-right: 0px;
-}
-.rowhead .rowitem:not(.has_opt), .opthead .rowitem, .colstack_head .rowitem {
+.rowhead:not(.has_opt) .rowitem, .opthead .rowitem, .colstack_head .rowitem {
 	width: 100%;
 }
 
-.opt {
-	float: left;
-	margin-top: 8px;
-	height: 30.4px;
+.optbox {
+	display: flex;
 	padding-left: 5px;
+	padding-top: 10.5px;
+	margin-top: 7px;
 	width: 100%;
 	background-color: var(--main-block-color);
-	padding-top: 11px;
+}
+.has_opt .rowitem {
+	margin-right: 0px;
+	display: inline-block;
+	padding-right: 0px;
+	margin-top: 7px;
+	padding-left: 12px;
+	padding-top: 12px;
 }
 .opt a {
 	font-size: 11px;
@@ -702,7 +711,7 @@ input[type=checkbox]:checked + label.poll_option_label .sel {
 	overflow: hidden;
 }
 .topic_left.topic_sticky .topic_inner_left {
-	border-top: 4px solid hsl(51, 100%, 50%);
+	border-top: 4px solid hsl(41, 100%, 50%);
 	padding-left: 8px;
 	padding-top: 8px;
 	margin-top: 0px;
