--- a/templates/forum.html
+++ b/templates/forum.html
@@ -3,20 +3,22 @@
 {{if gt .Page 1}}<div id="prevFloat" class="prev_button"><a class="prev_link" aria-label="Go to the previous page" rel="prev" href="/forum/{{.Forum.ID}}?page={{subtract .Page 1}}">&lt;</a></div>{{end}}
 {{if ne .LastPage .Page}}<div id="nextFloat" class="next_button"><a class="next_link" aria-label="Go to the next page" rel="next" href="/forum/{{.Forum.ID}}?page={{add .Page 1}}">&gt;</a></div>{{end}}
 
-<main itemscope itemtype="http://schema.org/ItemList">
-	<div id="forum_head_block" class="rowblock rowhead topic_list_title_block">
-		<div class="rowitem forum_title{{if ne .CurrentUser.ID 0}} has_opt{{end}}">
+<main id="forumItemList" itemscope itemtype="http://schema.org/ItemList">
+	<div id="forum_head_block" class="rowblock rowhead topic_list_title_block{{if ne .CurrentUser.ID 0}} has_opt{{end}}">
+		<div class="rowitem forum_title">
 			<h1 itemprop="name">{{.Title}}</h1>
 		</div>
 		{{if ne .CurrentUser.ID 0}}
-			{{if .CurrentUser.Perms.CreateTopic}}
-			<div class="pre_opt auto_hide"></div>
-			<div class="opt create_topic_opt" title="Create Topic" aria-label="Create a topic"><a class="create_topic_link" href="/topics/create/{{.Forum.ID}}"></a></div>
-			{{/** TODO: Add a permissions check for this **/}}
-			<div class="opt mod_opt" title="Moderate">
-				<a class="moderate_link" href="#" aria-label="Moderate Posts"></a>
+			<div class="optbox">
+				{{if .CurrentUser.Perms.CreateTopic}}
+				<div class="pre_opt auto_hide"></div>
+				<div class="opt create_topic_opt" title="Create Topic" aria-label="Create a topic"><a class="create_topic_link" href="/topics/create/{{.Forum.ID}}"></a></div>
+				{{/** TODO: Add a permissions check for this **/}}
+				<div class="opt mod_opt" title="Moderate">
+					<a class="moderate_link" href="#" aria-label="Moderate Posts"></a>
+				</div>
+				{{else}}<div class="opt locked_opt" title="You don't have the permissions needed to create a topic" aria-label="You don't have the permissions needed to make a topic in this forum"><a></a></div>{{end}}
 			</div>
-			{{else}}<div class="opt locked_opt" title="You don't have the permissions needed to create a topic" aria-label="You don't have the permissions needed to make a topic in this forum"><a></a></div>{{end}}
 			<div style="clear: both;"></div>
 		{{end}}
 	</div>
