--- a/templates/header.html
+++ b/templates/header.html
@@ -24,4 +24,6 @@
 		<div class="container">
 {{template "menu.html" .}}
 <div id="back"><div id="main" {{if .Header.Widgets.RightSidebar}}class="shrink_main"{{end}}>
-{{range .Header.NoticeList}}<div class="alert">{{.}}</div>{{end}}
+{{range .Header.NoticeList}}<div class="alertbox">
+	<div class="alert">{{.}}</div>
+</div>{{end}}
